ingress/monitoring-ingress-oauth.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod    
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-signin: https://$host/oauth2/start?rd=$http_host$request_uri
    nginx.ingress.kubernetes.io/auth-url: https://$host/oauth2/auth
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: monitoring-oauth-ingress
  namespace: monitoring
spec:
  rules:
  - host: ${grafana_ingress_dns}
    http:
      paths:
      - backend:
          service:
            name: kube-prometheus-grafana
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - ${grafana_ingress_dns}
    secretName: grafana-letsencrypt-secret
