ingress/oauth-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: oauth2-proxy
  namespace: monitoring
spec:
  rules:
  - host: ${grafana_ingress_dns}
    http:
      paths:
      - backend:
          service:
            name: oauth
            port:
              number: 4180
        path: /oauth2
        pathType: Prefix
  tls:
  - hosts:
    - ${grafana_ingress_dns}
    secretName: grafana-letsencrypt-secret
